mobile layout for login page

--- a/static/login.html
+++ b/static/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>pull last events</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
 <script>
