--- a/static/login.html
+++ b/static/login.html
@@ -18,7 +18,7 @@
         if (response.status === 'connected') {
             //let token = response.authResponse.accessToken;
             console.log(response.authResponse);//.accessToken);
-            document.location.replace('/token/'+response.authResponse.userID+'/'+response.authResponse.accessToken);
+            document.location.replace('/token/' + response.authResponse.userID + '/' + response.authResponse.accessToken);
             // Logged into your app and Facebook.
             //testAPI();
         } else {
@@ -32,19 +32,19 @@
     // Button.  See the onlogin handler attached to it in the sample
     // code below.
     function checkLoginState() {
-        FB.getLoginStatus(function(response) {
+        FB.getLoginStatus(function (response) {
             statusChangeCallback(response);
         });
     }
 
-    window.fbAsyncInit = function() {
+    window.fbAsyncInit = function () {
         FB.init({
-            appId      : '1985660361539188',
-            cookie     : true,  // enable cookies to allow the server to access
-                                // the session
-            status     : false,
-            xfbml      : true,  // parse social plugins on this page
-            version    : 'v3.1' // The Graph API version to use for the call
+            appId: '1985660361539188',
+            cookie: true,  // enable cookies to allow the server to access
+                           // the session
+            status: false,
+            xfbml: true,  // parse social plugins on this page
+            version: 'v3.1' // The Graph API version to use for the call
         });
 
         // Now that we've initialized the JavaScript SDK, we call
@@ -59,17 +59,18 @@
         //
         // These three cases are handled in the callback function.
 
-        FB.getLoginStatus(function(response) {
+        FB.getLoginStatus(function (response) {
             statusChangeCallback(response);
         });
 
     };
 
     // Load the SDK asynchronously
-    (function(d, s, id) {
+    (function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
+        js = d.createElement(s);
+        js.id = id;
         js.src = "https://connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
@@ -78,7 +79,7 @@
     // successful.  See statusChangeCallback() for when this call is made.
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me/events', function(response) {
+        FB.api('/me/events', function (response) {
             console.log(response);
             //document.getElementById('status').innerHTML = 'Thanks for logging in, ' + response.name + '!';
         });
